lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:23: error: ')' expected but ';' found.
	return new Segment((a,b);(a+50,b))
                                ^Lander:23: error: ';' expected but ')' found.
	return new Segment((a,b);(a+50,b))
                                         ^